system-config-printer (1.5.7-2) UNRELEASED; urgency=medium

  * debian/control.in: s/gnome-packagekit-session/gnome-software, the former
    is a transitional package

 -- Laurent Bigonville <bigon@debian.org>  Tue, 13 Oct 2015 11:38:46 +0200

system-config-printer (1.5.7-1) unstable; urgency=medium

  * New upstream release.
  * Add Tim Waugh's public key to debian/upstream/signing-key.asc and
    tell uscan to check the tarball signatures.
  * Drop 0001-Adjust-python-paths.patch, not needed as all Python source
    files are installed into the same directory.
  * Refresh other patches via quilt.
  * Rename python-cupshelpers to python3-cupshelpers, following upstream
    switch to Python 3.
  * debian/control:
    - Replace python-* with python3-*.
    - Replace python-pycurl with python3-requests.
    - Replace gnome-icon-theme with adwaita-icon-theme.
    - Drop ancient hal-cups-utils conflicts, that package is not even in
      oldoldstable (aka squeeze).
    - Remove trailing whitespace from package descriptions.
  * Add 03_install_layout.patch to install cupshelpers Python module to
    correct location (copied from Ubuntu).
  * debian/gpk-install-package-name:
    - Update to make it work with Python 3.
    - Minor refactorings.
  * Rewrite debian/copyright using 1.0 format.
  * Bump debhelper compatibility level to 9.
  * No-op wrap and sort.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 18 Sep 2015 12:12:29 +0300

system-config-printer (1.4.8-1) unstable; urgency=medium

  [ Andreas Henriksson ]
  * New upstream release.
    - Fixes TypeError when trying to change printer properties
      (closes: #791705)
  * Drop patches obsoleted by upstream changes:
    - 0003-Use-our-custom-cpk-install-package-name.patch
    - 0008-return-exception-rather-than-looping.patch
  * Refresh patches via quilt
  * Fix package description spelling error caught by lintian
    - Insert 'one' in ... allow one to...

  [ Dmitry Shachnev ]