@@ -1,48 +1,0 @@
-#!/usr/bin/python3 -u
-# vim: set fileencoding=utf-8 :
-#
-# (C) 2010 Guido Guenther <agx@sigxcpu.org>
-#    This program is free software; you can redistribute it and/or modify
-#    it under the terms of the GNU General Public License as published by
-#    the Free Software Foundation; either version 2 of the License, or
-#    (at your option) any later version.
-#
-#    This program is distributed in the hope that it will be useful,
-#    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#    GNU General Public License for more details.
-#
-#    You should have received a copy of the GNU General Public License
-#    along with this program; if not, write to the Free Software
-#    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-#
-"""Emulate gpk-install-package-name"""
-
-import sys
-import dbus
-
-def main(argv):
-    pkgs = argv[1:]
-    if not pkgs:
-        sys.exit("No packages given")
-
-    bus = dbus.SessionBus()
-    try:
-        pk = bus.get_object('org.freedesktop.PackageKit',
-                            '/org/freedesktop/PackageKit')
-    except dbus.exceptions.DBusException as cause:
-        sys.exit(cause)
-
-    pk_iface = dbus.Interface(pk, dbus_interface='org.freedesktop.PackageKit.Modify')
-
-    try:
-        ret = pk_iface.InstallPackageNames(0, pkgs, "hide-finished,hide-warnings", timeout=300000)
-        if ret:
-            sys.exit("Error installing packages")
-    except dbus.exceptions.DBusException as cause:
-        sys.exit(cause)
-
-if __name__ == '__main__':
-    main(sys.argv)
-
-# vim:et:ts=4:sw=4:et:sts=4:ai:set list listchars=tab\:»·,trail\:·:
