@@ -15,7 +15,10 @@ DEB_DH_INSTALL_ARGS := --list-missing
 
 DEB_PYTHON3_MODULE_PACKAGES := python3-cupshelpers \
                                system-config-printer \
-                               system-config-printer-udev
+                               system-config-printer-udev \
+                               system-config-printer-common
+
+DEB_PYTHON_PRIVATE_MODULES_DIRS_ALL := /usr/share/system-config-printer
 
 DEB_CONFIGURE_EXTRA_FLAGS := \
 		--sbindir=/usr/bin \
