@@ -1,0 +1,37 @@
+etc/dbus-1/system.d/com.redhat.NewPrinterNotification.conf
+etc/dbus-1/system.d/com.redhat.PrinterDriversInstaller.conf
+usr/share/dbus-1/interfaces/*.xml
+usr/share/dbus-1/services/*.service
+usr/bin/scp-dbus-service
+usr/share/locale/
+usr/share/system-config-printer/asyncconn.py
+usr/share/system-config-printer/asyncipp.py
+usr/share/system-config-printer/asyncpk1.py
+usr/share/system-config-printer/authconn.py
+usr/share/system-config-printer/config.py
+usr/share/system-config-printer/cupspk.py
+usr/share/system-config-printer/debug.py
+usr/share/system-config-printer/dnssdresolve.py
+usr/share/system-config-printer/errordialogs.py
+usr/share/system-config-printer/firewallsettings.py
+usr/share/system-config-printer/gtkinklevel.py
+usr/share/system-config-printer/gui.py
+usr/share/system-config-printer/installpackage.py
+usr/share/system-config-printer/jobviewer.py
+usr/share/system-config-printer/killtimer.py
+usr/share/system-config-printer/monitor.py
+usr/share/system-config-printer/newprinter.py
+usr/share/system-config-printer/options.py
+usr/share/system-config-printer/optionwidgets.py
+usr/share/system-config-printer/OpenPrintingRequest.py
+usr/share/system-config-printer/PhysicalDevice.py
+usr/share/system-config-printer/ppdcache.py
+usr/share/system-config-printer/ppdippstr.py
+usr/share/system-config-printer/ppdsloader.py
+usr/share/system-config-printer/printerproperties.py
+usr/share/system-config-printer/probe_printer.py
+usr/share/system-config-printer/pysmb.py
+usr/share/system-config-printer/scp-dbus-service.py
+usr/share/system-config-printer/smburi.py
+usr/share/system-config-printer/statereason.py
+usr/share/system-config-printer/timedops.py
