@@ -1,10 +1,23 @@
-debian/gpk-install-package-name /usr/share/system-config-printer/
-etc/dbus-1
-etc/xdg
-usr/bin
-usr/share/appdata
-usr/share/applications
-usr/share/dbus-1
-usr/share/locale
-usr/share/man
-usr/share/system-config-printer
+usr/bin/system-config-printer
+usr/bin/install-printerdriver
+usr/share/system-config-printer/check-device-ids.py
+usr/share/system-config-printer/HIG.py
+usr/share/system-config-printer/SearchCriterion.py
+usr/share/system-config-printer/serversettings.py
+usr/share/system-config-printer/system-config-printer.py
+usr/share/system-config-printer/ToolbarSearchEntry.py
+usr/share/system-config-printer/userdefault.py
+usr/share/system-config-printer/troubleshoot
+usr/share/system-config-printer/icons
+usr/share/system-config-printer/install-printerdriver.py
+usr/share/system-config-printer/xml/*.rng
+usr/share/system-config-printer/xml/validate.py
+usr/share/system-config-printer/ui/*.ui
+usr/share/applications/system-config-printer.desktop
+usr/share/appdata/*.appdata.xml
+usr/share/man/man1/system-config-printer.1
+
+usr/bin/system-config-printer-applet
+usr/share/system-config-printer/applet.py
+etc/xdg/autostart/print-applet.desktop
+usr/share/man/man1/system-config-printer-applet.1
