@@ -1,9 +1,13 @@
 system-config-printer (1.5.7-2) UNRELEASED; urgency=medium
 
+  * Move part of system-config-printer to system-config-printer-common
+    package, gnome-control-center only needs a subset of system-config-printer
   * debian/control.in: s/gnome-packagekit-session/gnome-software, the former
     is a transitional package
+  * debian/control.in: Bump Standards-Version to 3.9.8 (no further changes)
+  * Drop debian/gpk-install-package-name, this doesn't seem needed anymore
 
- -- Laurent Bigonville <bigon@debian.org>  Tue, 13 Oct 2015 11:38:46 +0200
+ -- Laurent Bigonville <bigon@debian.org>  Wed, 01 Jun 2016 17:25:17 +0200
 
 system-config-printer (1.5.7-1) unstable; urgency=medium
 
